@@ -7,6 +7,13 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2023 APR 07a
+  * in model/chem/_Air_Plasma_11s/parent2023.c
+    - reverted to 23apr02a version
+  * in model/chem/_Air_Plasma_11s/doc/report.tex
+    - reverted to 23apr02a version
+    
+
 2023 APR 04a
   * in model/chem/_Air_Plasma_11s/parent2023.c
     - deleted reactions 26-28
